--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "@atlaskit/pragmatic-drag-and-drop-auto-scroll": "^1.3.0",
     "@atlaskit/pragmatic-drag-and-drop-hitbox": "^1.0.3",
     "@blueprintjs/popover2": "^1.13.3",
+    "@excalidraw/excalidraw": "^0.17.6",
     "@headlessui/react": "^1.7.3",
     "@intercom/messenger-js-sdk": "^0.0.12",
     "@nivo/bar": "0.80.0",
